[tool.poetry]
name = "proxy-finder"
version = "0.1.0"
description = ""
authors = ["Hüseyin Samet Çıkrıkcı <s.cikrikci@digitastic.app>"]
readme = "README.md"
packages = [{include = "proxy_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.poetry.scripts]
start = "proxy_finder:main"